--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome</div>
+                <div class="masthead-subheading">Test</div>
                 <div class="masthead-heading text-uppercase">Homepage</div>
             </div>
         </header>
