--- a/page-one.html
+++ b/page-one.html
@@ -29,6 +29,9 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Page One</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-two.html">Page Two</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-three.html">Page Three</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-four.html">Page Four</a></li>
                     </ul>
                 </div>
             </div>
