--- a/page-three.html
+++ b/page-three.html
@@ -39,8 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Test</div>
-                <div class="masthead-heading text-uppercase">Homepage</div>
+                <div class="masthead-subheading">Welcome</div>
+                <div class="masthead-heading text-uppercase">Page Three</div>
             </div>
         </header>
         <!-- Services-->
