Changed some headings on the main page

--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Test</div>
-                <div class="masthead-heading text-uppercase">Homepage</div>
+                <div class="masthead-subheading">The life guide</div>
+                <div class="masthead-heading text-uppercase">Manchester</div>
             </div>
         </header>
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">In-Page Navigation</h2>               
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+             
+
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Portfolio</a>              
+                        <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Clubs</a>              
                     </div>
                     <div class="col-md-4">
-                         <a class="btn btn-primary btn-xl text-uppercase" href="#about">Timeline</a> 
+                         <a class="btn btn-primary btn-xl text-uppercase" href="#about">Bars</a> 
                     </div>
                     <div class="col-md-4">                     
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#team">Team</a> 
+                        <a class="btn btn-primary btn-xl text-uppercase" href="#team">Munch</a> 
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Gallery / Portfolio Example</h2>
+                    <h2 class="section-heading text-uppercase">New to Mcr</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
