--- a/page-two.html
+++ b/page-two.html
@@ -164,6 +164,11 @@
                 </div>
             </div>
         </section>
+        <!-- Page Content Two Column Snippet -->
+<div class="container mt-5">
+
+</div>
+<!-- /.container -->
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
