--- a/index.html
+++ b/index.html
@@ -64,6 +64,81 @@
                 </div>
             </div>
         </section>
+        <!-- Page Content One Column Snippet -->
+    <div class="container mt-5">
+
+        <!-- Page Heading -->
+        <h1 class="my-4">Code Snippet
+          <small>One Column</small>
+        </h1>
+  
+        <!-- Project One -->
+        <div class="row">
+          <div class="col-md-7">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="assets/img/nightclub-photo.jpg" alt="">
+          </div>
+          <div class="col-md-5">
+            <h3>Box One</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+          </div>
+        </div>
+        <!-- /.row -->
+  
+        <hr>
+  
+        <!-- Project Two -->
+        <div class="row">
+          <div class="col-md-12">
+            <h3>Box Two has no images</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+          </div>
+        </div>
+        <!-- /.row -->
+  
+        <hr>
+  
+        <!-- Project Three -->
+        <div class="row">
+          <div class="col-md-7">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
+          </div>
+          <div class="col-md-5">
+            <h3>Box Three</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+          </div>
+        </div>
+        <!-- /.row -->
+  
+        <hr>
+  
+        <!-- Project Four -->
+        <div class="row">
+          <div class="col-md-12">
+            <h3>Box Four has no imagery</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
+          </div>
+        </div>
+        <!-- /.row -->
+  
+        <hr>
+  
+        <!-- Project Five -->
+        <div class="row">
+  
+          <div class="col-md-5">
+            <h3>Box Five has an image to the right</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+          </div>
+          <div class="col-md-7">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
+          </div>
+        </div>
+        <!-- /.row -->
+  
+    <hr>
+  
+      </div>
+      <!-- /.container -->
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
