Changed main photo and added page selection on the home page

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-one.html">Page One</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-two.html">Page Two</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-three.html">Page Three</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-four.html">Page Four</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
                     </ul>
                 </div>
             </div>
@@ -53,13 +52,13 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Clubs</a>              
+                        <a class="btn btn-primary btn-xl text-uppercase" href="page-one.html">Clubs</a>              
                     </div>
                     <div class="col-md-4">
-                         <a class="btn btn-primary btn-xl text-uppercase" href="#about">Bars</a> 
+                         <a class="btn btn-primary btn-xl text-uppercase" href="page-two.html">Bars</a> 
                     </div>
                     <div class="col-md-4">                     
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#team">Munch</a> 
+                        <a class="btn btn-primary btn-xl text-uppercase" href="page-three.html">Munch</a> 
                     </div>
                 </div>
             </div>
@@ -67,73 +66,7 @@
         <!-- Page Content One Column Snippet -->
     <div class="container mt-5">
 
-        <!-- Page Heading -->
-        <h1 class="my-4">Code Snippet
-          <small>One Column</small>
-        </h1>
-  
-        <!-- Project One -->
-        <div class="row">
-          <div class="col-md-7">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="assets/img/nightclub-photo.jpg" alt="">
-          </div>
-          <div class="col-md-5">
-            <h3>Box One</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-          </div>
-        </div>
-        <!-- /.row -->
-  
-        <hr>
-  
-        <!-- Project Two -->
-        <div class="row">
-          <div class="col-md-12">
-            <h3>Box Two has no images</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-          </div>
-        </div>
-        <!-- /.row -->
-  
-        <hr>
-  
-        <!-- Project Three -->
-        <div class="row">
-          <div class="col-md-7">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
-          </div>
-          <div class="col-md-5">
-            <h3>Box Three</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          </div>
-        </div>
-        <!-- /.row -->
-  
-        <hr>
-  
-        <!-- Project Four -->
-        <div class="row">
-          <div class="col-md-12">
-            <h3>Box Four has no imagery</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          </div>
-        </div>
-        <!-- /.row -->
-  
-        <hr>
-  
-        <!-- Project Five -->
-        <div class="row">
-  
-          <div class="col-md-5">
-            <h3>Box Five has an image to the right</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          </div>
-          <div class="col-md-7">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
-          </div>
-        </div>
-        <!-- /.row -->
+
   
     <hr>
   
