--- a/page-one.html
+++ b/page-one.html
@@ -31,10 +31,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-one.html">Page One</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-two.html">Page Two</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-three.html">Page Three</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-four.html">Page Four</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,31 +41,12 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome</div>
-                <div class="masthead-heading text-uppercase">Page One</div>
+                <div class="masthead-subheading">The life guide</div>
+                <div class="masthead-heading text-uppercase">Clubs</div>
             </div>
         </header>
         
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">In-Page Navigation</h2>               
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Portfolio</a>              
-                    </div>
-                    <div class="col-md-4">
-                         <a class="btn btn-primary btn-xl text-uppercase" href="#about">Timeline</a> 
-                    </div>
-                    <div class="col-md-4">                     
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#team">Team</a> 
-                    </div>
-                </div>
-            </div>
-        </section>
+        
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
