--- a/page-four.html
+++ b/page-four.html
@@ -31,10 +31,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-one.html">Page One</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-two.html">Page Two</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-three.html">Page Three</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-four.html">Page Four</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
                     </ul>
                 </div>
             </div>
