Added some text on the home page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">New to Mcr</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">A selection of new venue's, restaurants and experiences coming to manchester in the upcoming weeks</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
