Added some text to the main page

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Vision</div>
+                                <div class="portfolio-caption-subheading text-muted">Nightlcub</div>
                             </div>
                         </div>
                     </div>
@@ -288,10 +288,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Vision</h2>
+                                    <p class="item-intro text-muted">A brand new nightclub in the heart of Manchester!</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definetly one to add to yout next weekends adventures. The music in the club ranges from DnB events, house, rap, rnb and much more so whatever music your into, Vision will provide a solid night of entertainment.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
