--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
+        <!-- Masthead-->ß
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">The life guide</div>
