Changed the font

--- a/page-one.html
+++ b/page-one.html
@@ -95,7 +95,7 @@
         <!-- Project Four -->
         <div class="row">
           <div class="col-md-12">
-            <h3>Box Four has no imagery</h3>
+            <h3>42nd Street</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
           </div>
         </div>
