--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
+                        
                     </ul>
                 </div>
             </div>
@@ -52,14 +54,18 @@
                 <div class="text-center">
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <a class="btn btn-primary btn-xl text-uppercase" href="page-one.html">Clubs</a>              
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                          <a class="btn btn-primary btn-xl text-uppercase" href="page-two.html">Bars</a> 
                     </div>
-                    <div class="col-md-4">                     
+                    <div class="col-md-3">                     
                         <a class="btn btn-primary btn-xl text-uppercase" href="page-three.html">Munch</a> 
+                    </div>
+                    <div class="col-md-3">      
+                        <a class="btn btn-primary btn-xl text-uppercase" href="page-four.html">About</a>              
+                        </div>    
                     </div>
                 </div>
             </div>
