--- a/page-four.html
+++ b/page-four.html
@@ -35,6 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
                     </ul>
                 </div>
             </div>
