--- a/page-one.html
+++ b/page-one.html
@@ -35,6 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
                     </ul>
                 </div>
             </div>
@@ -117,9 +118,6 @@
         </div>
         <!-- /.row -->
 
-
-
-        
         <div class="container mt=5"></div>
         <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2526156902313237%2C53.473364010076025%2C-2.246768474578858%2C53.475806494842494&amp;layer=mapnik&amp;marker=53.47458527003199%2C-2.2496920824050903" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=53.47459&amp;mlon=-2.24969#map=18/53.47459/-2.24969">View Larger Map</a></small>
         <!-- Portfolio item 6 modal popup-->
