--- a/page-four.html
+++ b/page-four.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-three.html">Food</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
                     </ul>
                 </div>
@@ -43,8 +43,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome</div>
-                <div class="masthead-heading text-uppercase">Page Four</div>
+                <div class="masthead-subheading">The life guide</div>
+                <div class="masthead-heading text-uppercase">About</div>
             </div>
         </header>
         <!-- Services-->
