--- a/page-one.html
+++ b/page-one.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-three.html">Munch</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-three.html">Food</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
                     </ul>
                 </div>
