--- a/page-three.html
+++ b/page-three.html
@@ -44,7 +44,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">The life guide</div>
-                <div class="masthead-heading text-uppercase">Munch</div>
+                <div class="masthead-heading text-uppercase">Food</div>
             </div>
         </header>
       
